Bug 493790 - Warning message "XXX is not installed but still has data present" does not immediately disappear when choosing to reinstall the app
Summary: Warning message "XXX is not installed but still has data present" does not im...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 6.1.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-28 19:08 UTC by stephan.seitz
Modified: 2024-12-13 16:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot: reinstalled but warning did not disappear (263.52 KB, image/png)
2024-09-28 19:08 UTC, stephan.seitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stephan.seitz 2024-09-28 19:08:23 UTC
Created attachment 174175 [details]
screenshot: reinstalled but warning did not disappear

SUMMARY


STEPS TO REPRODUCE
1. Install a Flathub and do some customization so it will generate some per-user configuration (I installed https://flathub.org/apps/de.schmidhuberj.tubefeeder and added some YouTube channels)
2. Uninstall the app
3. You will see the message that the app in uninstalled but still has data present
4. Reinstall the app

OBSERVED RESULT

- App will be reinstalled.
- UI updates and offers a "Launch XXX" button
- Warning that "XXX is not installed but has data present" is still visible

EXPECTED RESULT
- Warning that "XXX is not installed but has data present" will disappear once the app is installed again

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 24.10
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.6.2
Kernel Version: 6.11.0-7-generic (64-bit)
Graphics Platform: X11
Processors: 20 × Intel® Core™ i9-10900X CPU @ 3.70GHz
Memory: 31.0 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4070 SUPER/PCIe/SSE2


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-09-29 16:06:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/944
Comment 2 Aleix Pol 2024-10-30 21:24:31 UTC
Git commit 0f513329ae5f83ef969b38cf18b3469d0b8fc60d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 29/10/2024 at 01:22.
Pushed by apol into branch 'master'.

ResourcesProxyModel: integrate resources that aren't part of the model

If a resource that isn't part of the model changes, consider integrating
it.
Allows using the model state to track the presence of resources.

M  +5    -1    libdiscover/resources/ResourcesProxyModel.cpp

https://invent.kde.org/plasma/discover/-/commit/0f513329ae5f83ef969b38cf18b3469d0b8fc60d
Comment 3 Nate Graham 2024-12-13 16:37:01 UTC
Git commit 0f4c0b221320a4d3edd0077f3db726fae3a7d132 by Nate Graham, on behalf of Aleix Pol.
Committed on 13/12/2024 at 16:30.
Pushed by ngraham into branch 'master'.

flatpak: On RemoveData, refresh the model when the tracked resource changes

We need to issue a new query to see which are available.

M  +7    -0    libdiscover/backends/FlatpakBackend/qml/FlatpakRemoveData.qml

https://invent.kde.org/plasma/discover/-/commit/0f4c0b221320a4d3edd0077f3db726fae3a7d132
Comment 4 Nate Graham 2024-12-13 16:55:50 UTC
Git commit 8da790225aaca351e18ae71c4fd5d6cbebfd010c by Nate Graham, on behalf of Aleix Pol.
Committed on 13/12/2024 at 16:30.
Pushed by ngraham into branch 'master'.

Revert "ResourcesProxyModel: integrate resources that aren't part of the model"

This reverts commit 0f513329ae5f83ef969b38cf18b3469d0b8fc60d.
It breaks the premise that only the backend can tell which resources
belong to a query. Will have to address the bug in a different way.
Related: bug 496328

M  +1    -5    libdiscover/resources/ResourcesProxyModel.cpp

https://invent.kde.org/plasma/discover/-/commit/8da790225aaca351e18ae71c4fd5d6cbebfd010c