ResourcesProxyModel: integrate resources that aren't part of the model

If a resource that isn't part of the model changes, consider integrating
it.
Allows using the model state to track the presence of resources.

BUG: 493790