libdiscover/resources/ResourcesProxyModel.cpp
@@ -683,11 +683,15 @@ void ResourcesProxyModel::sortedInsertion(const QVector<StreamResult> &results)
 void ResourcesProxyModel::refreshResource(AbstractResource *resource, const QVector<QByteArray> &properties)
 {
     const auto row = indexOf(resource);
+    const bool filter = m_filters.shouldFilter(resource);
     if (row < 0) {
+        if (filter) {
+            sortedInsertion({{resource, 0}});
+        }
         return;
     }
 
-    if (!m_filters.shouldFilter(resource)) {
+    if (!filter) {
         beginRemoveRows({}, row, row);
         m_displayedResources.removeAt(row);
         endRemoveRows();
